# clap-tutorial

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  compile-linux.sh  compile-macos.sh  compile-windows.bat  my_plugin.cpp  my_plugin.h  plugin.cpp  plugin.h  vcpkg-configuration.json  vcpkg.json
CMakeModules/: FindSpeexDSP.cmake
src/: config.h.in  my_plugin.cpp  my_plugin.h  nuked_sc55.cpp  nuked_sc55.h  plugin.cpp  resampler_test.cpp
